--- a/GlassyNavigation/Base.lproj/Main.storyboard
+++ b/GlassyNavigation/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JKO-gX-OeO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ue6-fp-IWD">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -8,40 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="BaseController" customModule="GlassyNavigation" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="84e-it-pbf">
-                                <rect key="frame" x="136" y="408.66666666666669" width="121" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Load Images"/>
-                                <connections>
-                                    <action selector="loadImagesButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z1G-dX-IKy"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="84e-it-pbf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Yre-Oe-JKJ"/>
-                            <constraint firstItem="84e-it-pbf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="iNZ-8X-OT1"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Home" id="F5G-5Y-hFt"/>
-                    <connections>
-                        <segue destination="JwL-na-GXB" kind="show" id="NoW-M1-pnd"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="962.59541984732823" y="3.5211267605633805"/>
-        </scene>
-        <!--Images-->
+        <!--Images Controller-->
         <scene sceneID="VdE-Uw-D9b">
             <objects>
                 <viewController storyboardIdentifier="ImagesController" id="JwL-na-GXB" customClass="ImagesController" customModule="GlassyNavigation" customModuleProvider="target" sceneMemberID="viewController">
@@ -50,70 +17,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dag-2i-ECN">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="772"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="JwL-na-GXB" id="USH-Ml-mhX"/>
                                     <outlet property="delegate" destination="JwL-na-GXB" id="MC9-A8-LKn"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="diz-VU-leE">
-                                <rect key="frame" x="0.0" y="772" width="393" height="80"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Results" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="32G-DV-fHq">
-                                        <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="80"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHD-0e-es3">
-                                        <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="80"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="32G-DV-fHq" firstAttribute="leading" secondItem="diz-VU-leE" secondAttribute="leading" id="Rci-4w-voB"/>
-                                    <constraint firstItem="GHD-0e-es3" firstAttribute="leading" secondItem="32G-DV-fHq" secondAttribute="trailing" id="UUg-AF-7BP"/>
-                                    <constraint firstItem="32G-DV-fHq" firstAttribute="width" secondItem="GHD-0e-es3" secondAttribute="width" id="WA6-Wq-db5"/>
-                                    <constraint firstItem="GHD-0e-es3" firstAttribute="top" secondItem="diz-VU-leE" secondAttribute="top" id="aZp-hP-iHJ"/>
-                                    <constraint firstAttribute="height" constant="80" id="cD2-6F-p2k"/>
-                                    <constraint firstAttribute="bottom" secondItem="32G-DV-fHq" secondAttribute="bottom" id="gW9-Ox-pSx"/>
-                                    <constraint firstAttribute="trailing" secondItem="GHD-0e-es3" secondAttribute="trailing" id="ivM-0d-qcr"/>
-                                    <constraint firstAttribute="bottom" secondItem="GHD-0e-es3" secondAttribute="bottom" id="j8l-Gf-ssd"/>
-                                    <constraint firstItem="32G-DV-fHq" firstAttribute="top" secondItem="diz-VU-leE" secondAttribute="top" id="rAl-rP-Oca"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2w9-u7-FiZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Dag-2i-ECN" firstAttribute="top" secondItem="e1V-l4-ABv" secondAttribute="top" id="2Tk-lR-fiz"/>
                             <constraint firstItem="Dag-2i-ECN" firstAttribute="leading" secondItem="2w9-u7-FiZ" secondAttribute="leading" id="82v-KF-gOT"/>
-                            <constraint firstItem="diz-VU-leE" firstAttribute="leading" secondItem="2w9-u7-FiZ" secondAttribute="leading" id="K6G-1C-Y0S"/>
                             <constraint firstItem="2w9-u7-FiZ" firstAttribute="trailing" secondItem="Dag-2i-ECN" secondAttribute="trailing" id="LyU-Oi-Bui"/>
-                            <constraint firstItem="2w9-u7-FiZ" firstAttribute="trailing" secondItem="diz-VU-leE" secondAttribute="trailing" id="N6d-4E-gfb"/>
-                            <constraint firstAttribute="bottom" secondItem="diz-VU-leE" secondAttribute="bottom" id="rpT-FC-oAv"/>
-                            <constraint firstItem="diz-VU-leE" firstAttribute="top" secondItem="Dag-2i-ECN" secondAttribute="bottom" id="w0k-lv-ZEt"/>
+                            <constraint firstAttribute="bottom" secondItem="Dag-2i-ECN" secondAttribute="bottom" id="xJY-Sc-JSf"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Images" id="M7H-5J-NOG"/>
+                    <navigationItem key="navigationItem" id="M7H-5J-NOG"/>
                     <connections>
                         <outlet property="imagesTableView" destination="Dag-2i-ECN" id="v0A-pt-MsQ"/>
-                        <outlet property="pageLabel" destination="GHD-0e-es3" id="Hbe-Aw-H1X"/>
-                        <outlet property="totalLabel" destination="32G-DV-fHq" id="Ez5-rs-Gwp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ivj-O7-pWU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1869.4656488549617" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="2207" y="732"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Chat Controller-->
+        <scene sceneID="IA4-zI-1FU">
+            <objects>
+                <viewController storyboardIdentifier="ChatController" id="5KM-OV-aco" customClass="ChatController" customModule="GlassyNavigation" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dSS-Gk-J7F">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="si0-cM-9fH"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B3C-VE-PSC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4016" y="-23"/>
+        </scene>
+        <!--Feed-->
         <scene sceneID="2t0-AM-Yd5">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JKO-gX-OeO" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="JKO-gX-OeO" customClass="FeedNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Feed" image="doc.text.image" catalog="system" id="jJA-0R-IDu"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="k1n-Th-Jl2">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -121,17 +70,48 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3IH-o5-4Ct"/>
+                        <segue destination="JwL-na-GXB" kind="relationship" relationship="rootViewController" id="Dxg-PK-gcF"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="46h-aW-MQs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="993" y="732"/>
+        </scene>
+        <!--Feed-->
+        <scene sceneID="yMg-Ku-0xM">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="wrh-3T-3jb" customClass="PageViewController" customModule="GlassyNavigation" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Feed" image="internaldrive" catalog="system" id="7k5-1p-PSp"/>
+                    <navigationItem key="navigationItem" id="2FF-wd-4s7"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wPW-Ws-gNG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1982" y="4"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="6UN-0Z-HDD">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ue6-fp-IWD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cDY-WZ-Cl3">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nzz-Qw-vDR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="35.877862595419849" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
+        <image name="doc.text.image" catalog="system" width="115" height="128"/>
+        <image name="internaldrive" catalog="system" width="128" height="88"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
